# emg_from_lfp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/emg_from_lfp/: __init__.py  _core.py
tests/: test_emg_from_lfp.py
