[project]
name = "emg_from_lfp"
version = "0.1.0"
description = "Derive a synthetic EMG from LFP via correlation of high-frequency activity (Schomburg et al. 2014)."
readme = "README.md"
authors = [
    { name = "Graham Findlay", email = "gfindlay@wisc.edu" },
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "EMG",
    "LFP",
    "electromyogram",
    "electrophysiology",
    "neuroscience",
    "signal-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "numba>=0.60",
]

[project.urls]
Homepage = "https://github.com/CSC-UW/emg_from_lfp"
Repository = "https://github.com/CSC-UW/emg_from_lfp.git"
Issues = "https://github.com/CSC-UW/emg_from_lfp/issues"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
